@startuml
title Diagramme — Livraison & NCE & Sondage

package "Domain" {
  class User {
    +UUID id
    +String email
    +ENUM role {Admin, Quality, Producer}
  }

  class Project {
    +UUID id
    +String name
    +UUID owner_id
  }

  class Delivery {
    +UUID id
    +UUID project_id
    +String title
    +String description
    +UUID issuer_id 
    +Enum status {DRAFT, PUBLISHED}
    +Timestamp created_at
    +Timestamp published_at
  }

  class File {
    +UUID id
    +UUID delivery_id
    +UUID nce_id
    +String storage_key
    +String filename
    +Timestamp created_at

  }

  class Receipt {
    +UUID id
    +UUID delivery_id
    +UUID file_id
    +UUID generated_by
    +Timestamp generated_at
  }

  class Notification {
    +UUID id
    +UUID delivery_id
    +String to_email
    +Enum channel {EMAIL}
    +Enum status {PENDING,SENT,FAILED}
    +Timestamp sent_at
  }

  class Survey {
    +UUID id
    +UUID delivery_id (nullable)
    +Enum type {NPS, CSAT}
    +SmallInt score
    +String comment
    +String respondent_email
    +Timestamp responded_at
  }

  class NCE {
    +UUID id
    +UUID delivery_id
    +String title
    +Text description
    +Enum category {precision, coherence, oubli}
    +Enum severity {minor, major, critical}
    +Enum status {OPEN ,IN_PROGRESS, CLOSED}
    +UUID assigned_to (nullable)
    +Timestamp created_at
    +List<File> attachments
  }

  class AuditLog {
    +UUID id
    +UUID user_id
    +String action_type
    +String entity_type
    +UUID entity_id
    +Timestamp timestamp
  }

  class Guest {
    +UUID id
    +String email
    +String name
    +Timestamp created_at
  }
}

package "Integrations" {
  class EmailService {
    +sendEmail(notificationId)
    +pollInbox() : processReplies()
    +parseAttachments()
    +classifySurveyOrNCE()
  }
}

' Relations
User "1" --> "0..*" Delivery : crée
Project "1" --> "0..*" Delivery : contient
Delivery "1" --> "0..*" File : contient
Delivery "1" --> "0..1" Receipt : a
Delivery "1" --> "0..*" Notification : crée
Delivery "1" --> "0..*" Survey : collecte
Delivery "1" --> "0..*" NCE : collecte
User "1" --> "0..*" AuditLog : crée
Guest "0..*" --> Notification : reçoit
Guest "0..*" --> EmailService : répond par email (attachments + NCE info)
EmailService --> Survey : crée
EmailService --> NCE : crée + stocke fichiers

@enduml
